--- a/module-2-solution/index.html
+++ b/module-2-solution/index.html
@@ -2,36 +2,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" href="css/style.css">
-	<title>Responsive Layout</title>
+	<title>David Chu's China Bistro</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link href= 'https://fonts.googleapis.com/
+	css?family=Oxygen: 400,300,700' rel ='stylesheet' type= 'text/css'>
+	
 
 
 
 </head>
 <body>
-	<div class="row">
-	<h1>Our Menu</h1>
-  <div class="col-lg-4 col-md-6 col-sm-12" id="container">
-    <p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Deserunt ab quia eum possimus debitis illo consequuntur cum impedit! Non hic ratione minus reiciendis esse laboriosam rem fugit, quam ut iure!</p>
-  	<p id="p1">Chicken</p>
+	<header>
+		<nav id = "header-nav" class =  "navbar navbar-default">
+			<div class = "container">
+				<div class = "navbar-header">
+					<a href = "index.html" class= "">
+						<div id =" logo-img" alt= "logo image"></div>
+					</a>
 
-  	</div>
+			</div>
 
-  
-
-  <div class="col-lg-4 col-md-6 col-sm-12" id="container"><p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Quis, iste, nostrum dignissimos unde officiis doloremque debitis fugit ut! Voluptate odit nam unde harum aliquam aperiam quibusdam quod corrupti provident pariatur!</p>
-
-  	<p id="p2">Beef</p>
-
-  </div>
-
-  <div class="col-lg-4 col-md-12 col-sm-12" id="container"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, earum omnis natus voluptate, repudiandae inventore molestias eos reprehenderit corrupti nesciunt animi ea obcaecati vero numquam porro quidem? Numquam at, et!</p>
-
-  	<p  id="p3">Sushi</p>
-
-  </div>
-
-	</div>	
-
-</body>
+		</nav>
+	
+	</header>
+	
 </html>
